.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /\$1
spec:
  rules:
    - host: ecom.example.com
      http:
        paths:
          - path: /product(/|\$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /order(/|\$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
